tests/snapshots/run_file__math.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/math.bend
---
NumScott:
[0.500, 0.866, 0.577, 1.732, 1.155, 2.000, 0.551, 1.020, 0.482, 1.176, 0.785, 1.571, 3.000, 10.000, 9.000, -8.000, -9.000, 1.000, 1.000, 0.000, 0.000, 6.000, 6.000, 5.000]

Scott:
[0.500, 0.866, 0.577, 1.732, 1.155, 2.000, 0.551, 1.020, 0.482, 1.176, 0.785, 1.571, 3.000, 10.000, 9.000, -8.000, -9.000, 1.000, 1.000, 0.000, 0.000, 6.000, 6.000, 5.000]
