tests/snapshots/run_file__merge_sort.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/merge_sort.bend
---
NumScott:
120

Scott:
120
