tests/snapshots/run_file__mixed_syntax.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/mixed_syntax.hvm
---
Bool/False
