tests/snapshots/run_file__names_hyphen.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/names_hyphen.bend
---
NumScott:
1

Scott:
1
