tests/snapshots/run_file__names_hyphen.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/names_hyphen.hvm
---
Lazy mode:

1

Strict mode:

1
