tests/snapshots/run_file__names_hyphen_toplevel.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/names_hyphen_toplevel.bend
---
NumScott:
λa (a λb (b Foo-Bar/Baz-Qux/tag 1) fun-with-hyphen)

Scott:
λa (a λb (b 1) fun-with-hyphen)
